# fuzzy-octo-carnival

./: .gitignore  MODULE.bazel  README.md
src/: BUILD.bazel  cli.cs  paket.dependencies  paket.main.bzl  tests.cs
